[project]
name = "ekantipur-scraper"
version = "0.1.0"
description = "Playwright scraper for ekantipur.com – extracts entertainment news and cartoon of the day"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
